--- a/application.yml
+++ b/application.yml
@@ -1,8 +1,8 @@
 eureka:
   instance:
-    prefer-ip-address: true
+    prefer-ip-address:
   client:
-    fetch-registry: true
-    register-with-eureka: true
+    fetch-registry: 
+    register-with-eureka: 
     service-url:
       defaultZone: http://localhost:8761/eureka
